# blogtool-py

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test-only.yml
src/blogtool/: __init__.py  itertools.py  main.py  post.py
src/blogtool/cmd/: lsdraft.py  newpost.py  refresh.py
tests/: test_blogtool.py  test_cli_main.py  test_post.py
